--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hello",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://johnmichaelwalker.github.io/hello",
+  "homepage": "https://johnwalkers.com/hello",
   "dependencies": {
     "bootstrap": "^4.1.1",
     "gh-pages": "^2.0.1",
